--- a/sources/scss/_page.scss
+++ b/sources/scss/_page.scss
@@ -116,7 +116,7 @@ aside {
 	display: block;
 	padding: $basic / 2 $basic;
 	color: $color-bg;
-	white-space: wrap; 
+	white-space: normal; 
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
